[CCAP-716] - email daily new notifications for processing orgs